--- a/index.html
+++ b/index.html
@@ -1,83 +1,101 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#beranda">Aby</a></li>
-                <li><a href="#katalog">Katalog</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div id="content">
-        <article id="beranda" class="kartu">
-
-          <h2>Katalog Baju</h2>
-              <img src="assets/image/mockup.png" class="image" width="200" height="160" >
-          
-              <img src="assets/image/lvrs.png" class="image" width="200" height="160" >
-
-          </p></p>
- 
-        </article>
-
-            <article id="berita" class="kartu">
-            <h2>Baju Terbaru</h2>
-            <section>
-            <img src="assets/image/mockup.png" id="halu" alt="halu" width="300" height="260" >
-            <!-- style="float: left; margin: 10px;"> -->
-            <p><b>HALUPROJECT</b><br><font color="#f8192e"><b>Rp. 100.000</b></font></p>
-            <br><br></p></section>
-
-
-            <section>
-            <img src="assets/image/lvrs.png" id="lvrs" alt="lvrs" width="300" height="260" >
-            <!-- style="float: left; margin: 10px;"> -->
-            <p><b>Lovers</b><br><font color="#f8192e"><b>Rp. 120.000</b></font></p>
-            <br><br></p>
-                    </section>
-                </article>
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Tugas Bootstrap</span>
         </div>
-
-        <aside>
-            <article class="profile kartu">
-                <header>
-                    <h2>Biodata Saya</h2>
-                    <figure>
-                        <img src="assets/image/syifa.png">
-                        <figcaption><b>Syifa Abyananta</b></figcaption>
-                    </figure>
-                </header>
-                <section>
-                    <h3>Informasi Lainnya</h3>
-                    <table>
-                        <tr>
-                            <td>Nama :</th>
-                            <td>Syifa Abyananta</td>
-                        </tr>
-                        <tr>
-                            <th>Pekerjaan :</th>
-                            <td>Siswa</sup></td>
-                        </tr>
-                        
-                    </table>
-                </section>
-            </article>
-        </aside>
-    </article>
-
-    </main>
-    <footer>
-        <p>Submission Belajar Dasar Pemrograman Web &#169; 2022 - Dicoding Indonesia</p>
-    </footer>
-    <script src="assets/index.js"></script>
+    </nav>
+    <div class="col-12">
+    <img style="padding: 10px;" src="https://www.japan-guide.com/thumb/XYZeXYZe2172_1680.jpg" class="img-fluid">
+    </div>
+    <div class="col-12">
+    <div class="card-group" style="padding: 10px">
+    <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+</div>
+</div>
+<div class="container-fluid">
+    <h1>Contact Us</h1>
+    <div class="row">
+    <div class="col-6">
+        <div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Name</label>
+  <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Enter Name">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Phone</label>
+  <input type="phone" class="form-control" id="exampleFormControlInput1" placeholder="Enter Phone">
+</div>
+<div class="col-3">
+    <h6>Gender</h6>
+    <div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">Male</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">Female</label>
+</div>
+</div>
+<div class="col-3">
+<select class="form-select" aria-label="Default select example">
+  <option selected>Open this select menu</option>
+  <option value="1">One</option>
+  <option value="2">Two</option>
+  <option value="3">Three</option>
+</select>
+</div>
+</div>
+<div class="col-6">
+<div class="mb-3">
+<label for="exampleFormControlInput1" class="form-label">Email Address</label>
+  <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Enter Email">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextArea1" class="form-label">Comment</label>
+<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+    </div>
+</div>
+</div>
+<button type="submit" class="btn btn-primary align-right">Submit</button>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 </html>
